--- a/css/layout.css
+++ b/css/layout.css
@@ -1,9 +1,3 @@
-.header, .left-sidebar, .pricing-tables, .right-sidebar, .footer {
-  font-size: 2rem;
-  padding: 20px;
-  text-align: center;
-  background-color: lightblue;
-}
 
 /*--------------*\
  #GRID CONTAINER
@@ -15,8 +9,8 @@
     'header header header header'
     'left middle middle right'
     'footer footer footer footer';  
-  grid-template-columns: 25% 25% 25% 25%;
-  grid-template-rows: auto 1fr auto;
+  grid-template-columns: 24% 25% 25% 24%;
+  grid-template-rows: 5rem 28.57rem 5rem;
   height: 100vh;
   grid-column-gap: 10px;
   grid-row-gap: 10px;
@@ -33,7 +27,24 @@
 
 .header {
   grid-area: header;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
+
+.btn__login, .btn__sign-up {
+  margin: 10px;
+}
+
+.search-container {
+  margin-right: 10px;
+}
+
+.item-3 {
+  height: 3.571rem;
+  flex-grow: 1;
+}
+  
 
 
 
@@ -57,6 +68,9 @@
 
 .pricing-tables {
   grid-area: middle;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
 
 
@@ -71,6 +85,11 @@
   grid-area: right;
 }
 
+  .btn-container {
+    display: flex;
+    justify-content: space-around;
+  }
+
 
 
 
@@ -81,6 +100,9 @@
 
 .footer {
   grid-area: footer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 
@@ -91,7 +113,7 @@
  #OPTIONS FOR MOBILE DEVICES
 \*---------------------------*/
 
-@media (max-width: 768px) {
+@media (max-width: 1100px) {
   .grid-container {
     grid-template-areas:
       'header'
@@ -102,4 +124,14 @@
     grid-template-columns: 100%;
     grid-template-rows: 10% 1fr 1fr 1fr 10%;
   }
+  
+  .left-sidebar {
+    text-align: center;
+  }
+  
+  .input-container {
+    display: flex;
+    flex-flow: column wrap;
+  }
+  
 }
